使用 Colaboratory 创建

--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -244,7 +244,7 @@
       "metadata": {
         "id": "1up16TvMNwHU",
         "colab_type": "code",
-        "outputId": "d65a965f-0d3d-4a99-9e61-97604bd5ec8b",
+        "outputId": "b91df1bb-c427-480b-bf92-c1f94250ff26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -267,7 +267,7 @@
         "from torch.autograd import Variable\n",
         "from pytorch_pretrained_bert import BertTokenizer, BertModel, BertForMaskedLM, BertAdam"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,11 +402,11 @@
         "      \n",
         "    k1 = self.h1k1(hxs1) # n*128*64\n",
         "    e1 = self.k1e1(k1).squeeze(2) # n*128*1 -> n*128\n",
-        "    e1 = F.softmax(e1).unsqueeze(1) # n*1*128\n",
+        "    e1 = F.softmax(e1, dim=1).unsqueeze(1) # n*1*128\n",
         "    lstm1 = torch.matmul(e1, hxs1).squeeze(1)\n",
         "    k2 = self.h2k2(hxs2) # n*128*64\n",
         "    e2 = self.k2e2(k2).squeeze(2)\n",
-        "    e2 = F.softmax(e2).unsqueeze(1)\n",
+        "    e2 = F.softmax(e2, dim=1).unsqueeze(1)\n",
         "    lstm2 = torch.matmul(e2, hxs2).squeeze(1)\n",
         "    \n",
         "    lstm_x = torch.cat((lstm1, lstm2), 1)\n",
@@ -511,7 +511,7 @@
       "metadata": {
         "id": "DZY_IjiVO4Zt",
         "colab_type": "code",
-        "outputId": "ec6dcb61-b56c-415d-f9bc-22502e03b9f1",
+        "outputId": "e8e1170a-ee1b-4a9d-a9ea-759bbb580f1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
@@ -521,12 +521,12 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Fri Dec 21 11:33:22 2018       \n",
+            "Fri Dec 21 13:10:48 2018       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 396.44                 Driver Version: 396.44                    |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -534,7 +534,7 @@
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   64C    P0    68W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
+            "| N/A   64C    P0    67W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -570,7 +570,7 @@
         "device = torch.device(\"cuda\")\n",
         "end_epoch = 30\n",
         "tag = 'en' # en英文，cn中文\n",
-        "lr = 1e-3 #可以调节\n",
+        "lr = 3e-5 #可以调节\n",
         "checkpoint = ''\n",
         "bz = 24\n",
         "warmup_proportion = 0.1\n",
@@ -675,10 +675,10 @@
       "metadata": {
         "id": "wAX-He7RRIxE",
         "colab_type": "code",
-        "outputId": "5eab4c01-6ca3-4474-f91d-d51ce8e05593",
+        "outputId": "ae820b7b-6fbb-4596-cd37-7c4c6dc5be65",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1439
+          "height": 733
         }
       },
       "cell_type": "code",
@@ -695,92 +695,38 @@
         "  \n",
         "logger.info(\"Finish\")"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2018-12-21 11:33:37 Epoch 0, Iter 0, loss=1.8241, acc=0.5000\n",
-            "2018-12-21 11:34:57 Epoch 0, Iter 50, loss=0.7922, acc=0.5833\n",
-            "2018-12-21 11:36:18 Epoch 0, Iter 100, loss=0.4415, acc=0.7500\n",
-            "2018-12-21 11:37:39 Epoch 0, Iter 150, loss=0.6352, acc=0.6667\n",
-            "2018-12-21 11:38:59 Epoch 0, Iter 200, loss=0.7279, acc=0.6667\n",
-            "2018-12-21 11:40:20 Epoch 0, Iter 250, loss=0.4562, acc=0.7917\n",
-            "2018-12-21 11:41:41 Epoch 0, Iter 300, loss=0.5325, acc=0.6667\n",
-            "2018-12-21 11:43:01 Epoch 0, Iter 350, loss=0.4433, acc=0.7500\n",
-            "2018-12-21 11:43:30 Epoch 0, train_loss=0.5942, train_accuracy=0.6719\n",
-            "2018-12-21 11:45:22 Epoch 0, valid_loss=0.3968, valid_accuracy=0.8341\n",
-            "2018-12-21 11:45:32 Epoch 1, Iter 0, loss=0.7261, acc=0.7083\n",
-            "2018-12-21 11:46:53 Epoch 1, Iter 50, loss=0.3520, acc=0.7917\n",
-            "2018-12-21 11:48:14 Epoch 1, Iter 100, loss=0.1816, acc=0.8333\n",
-            "2018-12-21 11:49:35 Epoch 1, Iter 150, loss=0.3821, acc=0.7083\n",
-            "2018-12-21 11:50:56 Epoch 1, Iter 200, loss=0.4741, acc=0.7083\n",
-            "2018-12-21 11:52:17 Epoch 1, Iter 250, loss=0.5086, acc=0.6250\n",
-            "2018-12-21 11:53:38 Epoch 1, Iter 300, loss=0.4610, acc=0.6250\n",
-            "2018-12-21 11:54:58 Epoch 1, Iter 350, loss=0.2077, acc=0.9167\n",
-            "2018-12-21 11:55:27 Epoch 1, train_loss=0.4443, train_accuracy=0.7559\n",
-            "2018-12-21 11:57:18 Epoch 1, valid_loss=0.3840, valid_accuracy=0.8374\n",
-            "2018-12-21 11:57:28 Epoch 2, Iter 0, loss=0.4770, acc=0.7500\n",
-            "2018-12-21 11:58:49 Epoch 2, Iter 50, loss=0.5271, acc=0.7917\n",
-            "2018-12-21 12:00:10 Epoch 2, Iter 100, loss=0.2390, acc=0.8333\n",
-            "2018-12-21 12:01:31 Epoch 2, Iter 150, loss=0.5051, acc=0.7917\n",
-            "2018-12-21 12:02:52 Epoch 2, Iter 200, loss=0.2985, acc=0.8333\n",
-            "2018-12-21 12:04:13 Epoch 2, Iter 250, loss=0.6310, acc=0.7083\n",
-            "2018-12-21 12:05:34 Epoch 2, Iter 300, loss=0.2175, acc=0.9167\n",
-            "2018-12-21 12:06:54 Epoch 2, Iter 350, loss=0.5086, acc=0.5833\n",
-            "2018-12-21 12:07:23 Epoch 2, train_loss=0.3722, train_accuracy=0.7930\n",
-            "2018-12-21 12:09:15 Epoch 2, valid_loss=0.4068, valid_accuracy=0.8545\n",
-            "2018-12-21 12:09:25 Epoch 3, Iter 0, loss=0.5209, acc=0.7083\n",
-            "2018-12-21 12:10:47 Epoch 3, Iter 50, loss=0.4145, acc=0.8333\n",
-            "2018-12-21 12:12:07 Epoch 3, Iter 100, loss=0.2208, acc=0.9583\n",
-            "2018-12-21 12:13:29 Epoch 3, Iter 150, loss=0.2748, acc=0.8333\n",
-            "2018-12-21 12:14:49 Epoch 3, Iter 200, loss=0.2712, acc=0.7500\n",
-            "2018-12-21 12:16:10 Epoch 3, Iter 250, loss=0.2891, acc=0.7917\n",
-            "2018-12-21 12:17:30 Epoch 3, Iter 300, loss=0.6798, acc=0.7083\n",
-            "2018-12-21 12:18:51 Epoch 3, Iter 350, loss=0.2450, acc=0.9167\n",
-            "2018-12-21 12:19:20 Epoch 3, train_loss=0.3046, train_accuracy=0.8312\n",
-            "2018-12-21 12:21:12 Epoch 3, valid_loss=0.3542, valid_accuracy=0.8618\n",
-            "2018-12-21 12:21:22 Epoch 4, Iter 0, loss=0.3150, acc=0.7500\n",
-            "2018-12-21 12:22:44 Epoch 4, Iter 50, loss=0.2011, acc=0.8750\n",
-            "2018-12-21 12:24:06 Epoch 4, Iter 100, loss=0.2366, acc=0.8750\n",
-            "2018-12-21 12:25:27 Epoch 4, Iter 150, loss=0.2610, acc=0.7917\n",
-            "2018-12-21 12:26:49 Epoch 4, Iter 200, loss=0.2137, acc=0.8333\n",
-            "2018-12-21 12:28:09 Epoch 4, Iter 250, loss=0.2784, acc=0.7083\n",
-            "2018-12-21 12:29:30 Epoch 4, Iter 300, loss=0.2215, acc=0.8333\n",
-            "2018-12-21 12:30:52 Epoch 4, Iter 350, loss=0.1670, acc=0.9583\n",
-            "2018-12-21 12:31:21 Epoch 4, train_loss=0.2496, train_accuracy=0.8482\n",
-            "2018-12-21 12:33:13 Epoch 4, valid_loss=0.4153, valid_accuracy=0.8587\n",
-            "2018-12-21 12:33:15 Epoch 5, Iter 0, loss=0.4319, acc=0.6667\n",
-            "2018-12-21 12:34:37 Epoch 5, Iter 50, loss=0.2136, acc=0.8333\n",
-            "2018-12-21 12:35:59 Epoch 5, Iter 100, loss=0.2339, acc=0.8333\n",
-            "2018-12-21 12:37:19 Epoch 5, Iter 150, loss=0.1796, acc=0.9167\n",
-            "2018-12-21 12:38:41 Epoch 5, Iter 200, loss=0.0891, acc=0.9583\n",
-            "2018-12-21 12:40:02 Epoch 5, Iter 250, loss=0.1585, acc=0.8333\n",
-            "2018-12-21 12:41:23 Epoch 5, Iter 300, loss=0.2440, acc=0.7917\n",
-            "2018-12-21 12:42:44 Epoch 5, Iter 350, loss=0.1371, acc=0.9167\n",
-            "2018-12-21 12:43:13 Epoch 5, train_loss=0.2130, train_accuracy=0.8638\n",
-            "2018-12-21 12:45:05 Epoch 5, valid_loss=0.5921, valid_accuracy=0.8622\n",
-            "2018-12-21 12:45:15 Epoch 6, Iter 0, loss=0.1450, acc=0.8333\n",
-            "2018-12-21 12:46:37 Epoch 6, Iter 50, loss=0.2035, acc=0.9167\n",
-            "2018-12-21 12:47:58 Epoch 6, Iter 100, loss=0.1461, acc=0.9167\n",
-            "2018-12-21 12:49:20 Epoch 6, Iter 150, loss=0.2050, acc=0.8333\n",
-            "2018-12-21 12:50:41 Epoch 6, Iter 200, loss=0.2397, acc=0.7917\n",
-            "2018-12-21 12:52:02 Epoch 6, Iter 250, loss=0.0876, acc=0.9167\n",
-            "2018-12-21 12:53:23 Epoch 6, Iter 300, loss=0.2948, acc=0.7083\n",
-            "2018-12-21 12:54:44 Epoch 6, Iter 350, loss=0.2071, acc=0.9167\n",
-            "2018-12-21 12:55:12 Epoch 6, train_loss=0.1948, train_accuracy=0.8721\n",
-            "2018-12-21 12:57:05 Epoch 6, valid_loss=0.4667, valid_accuracy=0.8699\n",
-            "2018-12-21 12:57:15 Epoch 7, Iter 0, loss=0.2428, acc=0.8750\n",
-            "2018-12-21 12:58:37 Epoch 7, Iter 50, loss=0.1172, acc=0.9167\n",
-            "2018-12-21 12:59:58 Epoch 7, Iter 100, loss=0.1462, acc=0.9167\n",
-            "2018-12-21 13:01:19 Epoch 7, Iter 150, loss=0.2030, acc=0.7917\n",
-            "2018-12-21 13:02:40 Epoch 7, Iter 200, loss=0.1738, acc=0.8750\n",
-            "2018-12-21 13:04:01 Epoch 7, Iter 250, loss=0.1168, acc=1.0000\n",
-            "2018-12-21 13:05:22 Epoch 7, Iter 300, loss=0.2434, acc=0.8333\n",
-            "2018-12-21 13:06:42 Epoch 7, Iter 350, loss=0.1791, acc=0.8333\n",
-            "2018-12-21 13:07:10 Epoch 7, train_loss=0.1848, train_accuracy=0.8760\n"
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:78: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:82: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "2018-12-21 13:11:03 Epoch 0, Iter 0, loss=0.6850, acc=0.3750\n",
+            "2018-12-21 13:12:23 Epoch 0, Iter 50, loss=0.6446, acc=0.5417\n",
+            "2018-12-21 13:13:43 Epoch 0, Iter 100, loss=0.5050, acc=0.6667\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-b8b1a8a24b22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_epoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'=> Epoch %d, lr = %0.6f <='\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprint_every\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-274cd3ce07a8>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, optimizer, logger, epoch, print_every)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    100\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \"\"\"\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     88\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     89\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     },
