使用 Colaboratory 创建

--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -6,9 +6,7 @@
       "name": "bert-analysis.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [
-        "6r0ZwikpHmYO"
-      ],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -713,7 +711,7 @@
         "outputId": "b2de727b-73f1-451d-d439-b5e7d83c39a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 4031
+          "height": 5957
         }
       },
       "cell_type": "code",
@@ -730,7 +728,7 @@
         "  \n",
         "logger.info(\"Finish\")"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,7 +955,114 @@
             "2018-12-23 09:11:18 Epoch 19, valid_loss=0.7006, valid_accuracy=0.8984\n",
             "2018-12-23 09:11:29 Epoch 20, Iter 0, loss=0.1444, acc=0.8750\n",
             "2018-12-23 09:12:50 Epoch 20, Iter 50, loss=0.0867, acc=0.8750\n",
-            "2018-12-23 09:14:10 Epoch 20, Iter 100, loss=0.1733, acc=0.8750\n"
+            "2018-12-23 09:14:10 Epoch 20, Iter 100, loss=0.1733, acc=0.8750\n",
+            "2018-12-23 09:15:31 Epoch 20, Iter 150, loss=0.1155, acc=0.8750\n",
+            "2018-12-23 09:16:52 Epoch 20, Iter 200, loss=0.2888, acc=0.8333\n",
+            "2018-12-23 09:18:12 Epoch 20, Iter 250, loss=0.1155, acc=0.9167\n",
+            "2018-12-23 09:19:33 Epoch 20, Iter 300, loss=0.2311, acc=0.7917\n",
+            "2018-12-23 09:20:54 Epoch 20, Iter 350, loss=0.2022, acc=0.8333\n",
+            "2018-12-23 09:22:15 Epoch 20, Iter 400, loss=0.2602, acc=0.8333\n",
+            "2018-12-23 09:23:28 Epoch 20, train_loss=0.1737, train_accuracy=0.8741\n",
+            "2018-12-23 09:24:34 Epoch 20, valid_loss=0.7430, valid_accuracy=0.8976\n",
+            "2018-12-23 09:24:36 Epoch 21, Iter 0, loss=0.2022, acc=0.9583\n",
+            "2018-12-23 09:25:56 Epoch 21, Iter 50, loss=0.2022, acc=0.7500\n",
+            "2018-12-23 09:27:17 Epoch 21, Iter 100, loss=0.2311, acc=0.7917\n",
+            "2018-12-23 09:28:38 Epoch 21, Iter 150, loss=0.1444, acc=0.9167\n",
+            "2018-12-23 09:29:58 Epoch 21, Iter 200, loss=0.1156, acc=0.8750\n",
+            "2018-12-23 09:31:19 Epoch 21, Iter 250, loss=0.1733, acc=0.8750\n",
+            "2018-12-23 09:32:39 Epoch 21, Iter 300, loss=0.2599, acc=0.8750\n",
+            "2018-12-23 09:34:00 Epoch 21, Iter 350, loss=0.1733, acc=0.9167\n",
+            "2018-12-23 09:35:21 Epoch 21, Iter 400, loss=0.1155, acc=0.8750\n",
+            "2018-12-23 09:36:34 Epoch 21, train_loss=0.1780, train_accuracy=0.8751\n",
+            "2018-12-23 09:37:40 Epoch 21, valid_loss=0.7704, valid_accuracy=0.8969\n",
+            "2018-12-23 09:37:41 Epoch 22, Iter 0, loss=0.1444, acc=0.9167\n",
+            "2018-12-23 09:39:02 Epoch 22, Iter 50, loss=0.1155, acc=0.8750\n",
+            "2018-12-23 09:40:23 Epoch 22, Iter 100, loss=0.1444, acc=0.9583\n",
+            "2018-12-23 09:41:43 Epoch 22, Iter 150, loss=0.1444, acc=0.8750\n",
+            "2018-12-23 09:43:04 Epoch 22, Iter 200, loss=0.2599, acc=0.7917\n",
+            "2018-12-23 09:44:25 Epoch 22, Iter 250, loss=0.0867, acc=0.8750\n",
+            "2018-12-23 09:45:46 Epoch 22, Iter 300, loss=0.2022, acc=0.9167\n",
+            "2018-12-23 09:47:06 Epoch 22, Iter 350, loss=0.2599, acc=0.7083\n",
+            "2018-12-23 09:48:27 Epoch 22, Iter 400, loss=0.3177, acc=0.7083\n",
+            "2018-12-23 09:49:40 Epoch 22, train_loss=0.1760, train_accuracy=0.8726\n",
+            "2018-12-23 09:50:46 Epoch 22, valid_loss=0.7712, valid_accuracy=0.8980\n",
+            "2018-12-23 09:50:48 Epoch 23, Iter 0, loss=0.0578, acc=1.0000\n",
+            "2018-12-23 09:52:08 Epoch 23, Iter 50, loss=0.1444, acc=0.9167\n",
+            "2018-12-23 09:53:29 Epoch 23, Iter 100, loss=0.0867, acc=0.9583\n",
+            "2018-12-23 09:54:50 Epoch 23, Iter 150, loss=0.1155, acc=0.9583\n",
+            "2018-12-23 09:56:10 Epoch 23, Iter 200, loss=0.1155, acc=0.8750\n",
+            "2018-12-23 09:57:31 Epoch 23, Iter 250, loss=0.1733, acc=0.9167\n",
+            "2018-12-23 09:58:52 Epoch 23, Iter 300, loss=0.1733, acc=0.9167\n",
+            "2018-12-23 10:00:13 Epoch 23, Iter 350, loss=0.2022, acc=0.9583\n",
+            "2018-12-23 10:01:33 Epoch 23, Iter 400, loss=0.1444, acc=0.8750\n",
+            "2018-12-23 10:02:47 Epoch 23, train_loss=0.1768, train_accuracy=0.8764\n",
+            "2018-12-23 10:03:52 Epoch 23, valid_loss=0.7908, valid_accuracy=0.8935\n",
+            "2018-12-23 10:03:54 Epoch 24, Iter 0, loss=0.2239, acc=0.8333\n",
+            "2018-12-23 10:05:15 Epoch 24, Iter 50, loss=0.0578, acc=0.9583\n",
+            "2018-12-23 10:06:36 Epoch 24, Iter 100, loss=0.1155, acc=0.9167\n",
+            "2018-12-23 10:07:56 Epoch 24, Iter 150, loss=0.1444, acc=0.8333\n",
+            "2018-12-23 10:09:17 Epoch 24, Iter 200, loss=0.0868, acc=0.9167\n",
+            "2018-12-23 10:10:38 Epoch 24, Iter 250, loss=0.2311, acc=0.7083\n",
+            "2018-12-23 10:11:59 Epoch 24, Iter 300, loss=0.0578, acc=0.9583\n",
+            "2018-12-23 10:13:19 Epoch 24, Iter 350, loss=0.0578, acc=0.9583\n",
+            "2018-12-23 10:14:40 Epoch 24, Iter 400, loss=0.1733, acc=0.8750\n",
+            "2018-12-23 10:15:54 Epoch 24, train_loss=0.1783, train_accuracy=0.8730\n",
+            "2018-12-23 10:16:59 Epoch 24, valid_loss=1.2491, valid_accuracy=0.8476\n",
+            "2018-12-23 10:17:01 Epoch 25, Iter 0, loss=0.2896, acc=0.8750\n",
+            "2018-12-23 10:18:22 Epoch 25, Iter 50, loss=6.9629, acc=0.5417\n",
+            "2018-12-23 10:19:42 Epoch 25, Iter 100, loss=6.7879, acc=0.5417\n",
+            "2018-12-23 10:21:02 Epoch 25, Iter 150, loss=11.8271, acc=0.4583\n",
+            "2018-12-23 10:22:23 Epoch 25, Iter 200, loss=8.5910, acc=0.6667\n",
+            "2018-12-23 10:23:43 Epoch 25, Iter 250, loss=20.3207, acc=0.2917\n",
+            "2018-12-23 10:25:03 Epoch 25, Iter 300, loss=10.1210, acc=0.5000\n",
+            "2018-12-23 10:26:24 Epoch 25, Iter 350, loss=16.4561, acc=0.3333\n",
+            "2018-12-23 10:27:44 Epoch 25, Iter 400, loss=14.7420, acc=0.5417\n",
+            "2018-12-23 10:28:57 Epoch 25, train_loss=10.4886, train_accuracy=0.5109\n",
+            "2018-12-23 10:30:03 Epoch 25, valid_loss=13.0582, valid_accuracy=0.4946\n",
+            "2018-12-23 10:30:05 Epoch 26, Iter 0, loss=9.4990, acc=0.3750\n",
+            "2018-12-23 10:31:25 Epoch 26, Iter 50, loss=19.5279, acc=0.3333\n",
+            "2018-12-23 10:32:45 Epoch 26, Iter 100, loss=10.0323, acc=0.5000\n",
+            "2018-12-23 10:34:06 Epoch 26, Iter 150, loss=9.2971, acc=0.7083\n",
+            "2018-12-23 10:35:26 Epoch 26, Iter 200, loss=15.0809, acc=0.4583\n",
+            "2018-12-23 10:36:46 Epoch 26, Iter 250, loss=15.4830, acc=0.2917\n",
+            "2018-12-23 10:38:07 Epoch 26, Iter 300, loss=12.2519, acc=0.5417\n",
+            "2018-12-23 10:39:27 Epoch 26, Iter 350, loss=16.9203, acc=0.3333\n",
+            "2018-12-23 10:40:47 Epoch 26, Iter 400, loss=21.0162, acc=0.4167\n",
+            "2018-12-23 10:42:01 Epoch 26, train_loss=14.0423, train_accuracy=0.5004\n",
+            "2018-12-23 10:43:06 Epoch 26, valid_loss=15.1083, valid_accuracy=0.4946\n",
+            "2018-12-23 10:43:08 Epoch 27, Iter 0, loss=16.3414, acc=0.5417\n",
+            "2018-12-23 10:44:28 Epoch 27, Iter 50, loss=12.9171, acc=0.6250\n",
+            "2018-12-23 10:45:49 Epoch 27, Iter 100, loss=17.9461, acc=0.5833\n",
+            "2018-12-23 10:47:09 Epoch 27, Iter 150, loss=17.0878, acc=0.4583\n",
+            "2018-12-23 10:48:29 Epoch 27, Iter 200, loss=18.6583, acc=0.4167\n",
+            "2018-12-23 10:49:50 Epoch 27, Iter 250, loss=20.1589, acc=0.4167\n",
+            "2018-12-23 10:51:10 Epoch 27, Iter 300, loss=18.0171, acc=0.5000\n",
+            "2018-12-23 10:52:30 Epoch 27, Iter 350, loss=15.5598, acc=0.5000\n",
+            "2018-12-23 10:53:51 Epoch 27, Iter 400, loss=17.1758, acc=0.4167\n",
+            "2018-12-23 10:55:04 Epoch 27, train_loss=16.0457, train_accuracy=0.5020\n",
+            "2018-12-23 10:56:10 Epoch 27, valid_loss=17.2574, valid_accuracy=0.4946\n",
+            "2018-12-23 10:56:11 Epoch 28, Iter 0, loss=18.9090, acc=0.5417\n",
+            "2018-12-23 10:57:32 Epoch 28, Iter 50, loss=11.6459, acc=0.5417\n",
+            "2018-12-23 10:58:52 Epoch 28, Iter 100, loss=19.0933, acc=0.5417\n",
+            "2018-12-23 11:00:12 Epoch 28, Iter 150, loss=13.6278, acc=0.5833\n",
+            "2018-12-23 11:01:33 Epoch 28, Iter 200, loss=24.0945, acc=0.4167\n",
+            "2018-12-23 11:02:53 Epoch 28, Iter 250, loss=8.1710, acc=0.4583\n",
+            "2018-12-23 11:04:13 Epoch 28, Iter 300, loss=25.3378, acc=0.3750\n",
+            "2018-12-23 11:05:33 Epoch 28, Iter 350, loss=16.1209, acc=0.5833\n",
+            "2018-12-23 11:06:53 Epoch 28, Iter 400, loss=23.9733, acc=0.4167\n",
+            "2018-12-23 11:08:06 Epoch 28, train_loss=18.2550, train_accuracy=0.5049\n",
+            "2018-12-23 11:09:12 Epoch 28, valid_loss=19.7371, valid_accuracy=0.4946\n",
+            "2018-12-23 11:09:14 Epoch 29, Iter 0, loss=16.6483, acc=0.5833\n",
+            "2018-12-23 11:10:34 Epoch 29, Iter 50, loss=21.8047, acc=0.4583\n",
+            "2018-12-23 11:11:54 Epoch 29, Iter 100, loss=16.7597, acc=0.5833\n",
+            "2018-12-23 11:13:14 Epoch 29, Iter 150, loss=20.7166, acc=0.5417\n",
+            "2018-12-23 11:14:34 Epoch 29, Iter 200, loss=19.2250, acc=0.7083\n",
+            "2018-12-23 11:15:54 Epoch 29, Iter 250, loss=28.5634, acc=0.3750\n",
+            "2018-12-23 11:17:14 Epoch 29, Iter 300, loss=25.1058, acc=0.4167\n",
+            "2018-12-23 11:18:34 Epoch 29, Iter 350, loss=34.5427, acc=0.3750\n",
+            "2018-12-23 11:19:54 Epoch 29, Iter 400, loss=29.6642, acc=0.4583\n",
+            "2018-12-23 11:21:07 Epoch 29, train_loss=21.2918, train_accuracy=0.4928\n",
+            "2018-12-23 11:22:13 Epoch 29, valid_loss=22.5908, valid_accuracy=0.4946\n"
           ],
           "name": "stdout"
         }
@@ -982,7 +1087,8 @@
       },
       "cell_type": "code",
       "source": [
-        "# TO DO"
+        "# TO DO\n",
+        "# !cp bst_model/en_5e-05_2018-12-23_04-48-53.pth gdrive/My\\ Drive/en_5e-05_2018-12-23_04-48-53.pth"
       ],
       "execution_count": 0,
       "outputs": []
