使用 Colaboratory 创建

--- a/bert_analysis.ipynb
+++ b/bert_analysis.ipynb
@@ -9,6 +9,7 @@
       "collapsed_sections": [
         "6r0ZwikpHmYO"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +71,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +120,7 @@
         "!cp /content/gdrive/My\\ Drive/en_valid_data.h5 en_valid_data.h5\n",
         "!ls"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +175,7 @@
         "\n",
         "!pip install pytorch_pretrained_bert"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +268,7 @@
         "from torch.autograd import Variable\n",
         "from pytorch_pretrained_bert import BertTokenizer, BertModel, BertForMaskedLM, BertAdam"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,7 +537,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,8 +585,9 @@
         "torch.set_default_tensor_type('torch.FloatTensor')\n",
         "device = torch.device(\"cuda\")\n",
         "end_epoch = 30\n",
-        "tag = 'en' # en英文，cn中文\n",
+        "tag = 'cn' # en英文，cn中文\n",
         "lr = 5e-5 #可以调节\n",
+        "fine_tune = 0\n",
         "checkpoint = ''\n",
         "bz = 48\n",
         "warmup_proportion = 0.1\n",
@@ -671,7 +673,8 @@
         "formatter = logging.Formatter('%(asctime)s - %(message)s')\n",
         "handler.setFormatter(formatter)\n",
         "logger.addHandler(handler)\n",
-        "logger.info(\"Start print log\")"
+        "logger.info(\"Start print log\")\n",
+        "print(save_path)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -739,7 +742,9 @@
       },
       "cell_type": "code",
       "source": [
-        "# TO DO"
+        "# TO DO\n",
+        "\n",
+        "!cp bst_model/cn_0.001_2018-12-24_02-09-14.pth gdrive/My\\ Drive/cn_0.001_2018-12-24_02-09-14.pth"
       ],
       "execution_count": 0,
       "outputs": []
